--- a/index.html
+++ b/index.html
@@ -571,7 +571,7 @@
                 <td>Course-Net</td>
                 <td>22 Februari 2023</td>
                 <td>
-                  <a class="btn btn-primary mx-info" href="../gambar1.jpg" role="button"
+                  <a class="btn btn-primary mx-info" href="gambar1.jpg" role="button"
                     >View</a
                   >
                 </td>
@@ -582,7 +582,7 @@
                 <td>Course-Net</td>
                 <td>27 Februari 2023</td>
                 <td>
-                  <a class="btn btn-primary mx-info" href="../gambar2.jpg" role="button"
+                  <a class="btn btn-primary mx-info" href="gambar2.jpg" role="button"
                     >View</a
                   >
                 </td>
@@ -593,7 +593,7 @@
                 <td>Dicoding</td>
                 <td>13 Maret 2023</td>
                 <td>
-                  <a class="btn btn-primary mx-info" href="../gambar3.jpg" role="button"
+                  <a class="btn btn-primary mx-info" href="gambar3.jpg" role="button"
                     >View</a
                   >
                 </td>
@@ -604,7 +604,7 @@
                 <td>Indonesia AI</td>
                 <td>12 Februari 2023</td>
                 <td>
-                  <a class="btn btn-primary mx-info" href="../gambar4.jpg" role="button"
+                  <a class="btn btn-primary mx-info" href="gambar4.jpg" role="button"
                     >View</a
                   >
                 </td>
@@ -615,7 +615,7 @@
                 <td>Dibimbing ID</td>
                 <td>20 Maret 2023</td>
                 <td>
-                  <a class="btn btn-primary mx-info" href="../gambar5.jpg" role="button"
+                  <a class="btn btn-primary mx-info" href="gambar5.jpg" role="button"
                     >View</a
                   >
                 </td>
