--- a/index.html
+++ b/index.html
@@ -354,9 +354,10 @@
                 </div>
               </div>
               <div data-aos="fade-up" data-aos-duration="800" class="col-sm-4">
-               <b>Hobi saya adalah bermain sepak bola dan bermain game,
-                dan cita cita saya ingin menjadi programer dan pengusaha.
-                Menjadi programer di bagian Backend Developer.
+               <b>Hobi saya adalah bermain sepak bola, menonton kajian islam, 
+                dan sering mengikuti pelatihan yang berhubungan dengan IT ,
+                lalu cita-cita saya ingin menjadi programer dan pengusaha.
+                Saya ingin menjadi programer di bagian Backend Developer/Frontend Developer.
                </b> 
               </div>
             </div>
